# GermainLib

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  readme.md
apps/: CMakeLists.txt  main.c
cmake/: add_FetchContent_MakeAvailable.cmake  project-meta-info.in
docs/: CMakeLists.txt
include/germainLib/: color.h  geometry.h  germainLib.h  node_doublelink.h  node_simplelink.h  simpleLinkedList.h
include/germainLib/collection/: gCollection.h  gDoubleLinkedList.h  gQueue.h  gSimpleLinkedList.h  gStack.h
include/germainLib/collection/list/: doubleLinkedList.h  hashSetList.h  node_doublelink.h  queue.h  simpleLinkedList.h  stack.h
include/germainLib/collection/tree/: binaryTree.h  mAryTreeStatic.h  mArytree.h  nAryTreeDynamic.h  quadtree.h
include/germainLib/collection/utils/: gDoubleLinkNode.h  gSimpleLinkNode.h
include/germainLib/lang/: gLang.h  gString.h
include/germainLib/tools/: binary.h  free.h  math.h
include/germainLib/tree/: gBinaryTree.h  gQuadTree.h  gTree.h
include/germainLib/type/: shorterInt.h
include/germainLib/type/integer/: integer.h  integerMath.h
include/germainLib/utils/: gCompare.h  gElement.h  gUtils.h
src/: CMakeLists.txt  color.c  doubleLinkedList.c  geometry.c  node_doublelink.c  node_simplelink.c  queue.c  simpleLinkedList.c  stack.c
src/collection/: gDoubleLinkedList.c  gQueue.c  gSimpleLinkedList.c  gStack.c
src/collection/List/: doubleLinkedList.c  hashSetList.c  node_doublelink.c  node_simplelink.c  queue.c  simpleLinkedList.c  stack.c
src/collection/Tree/: binaryTree.c  mAryTreeStatic.c  quadtree.c
src/lang/: gString.c
src/tools/: binary.c  math.c
src/type/: shorterInt.c
src/type/integer/: integer.c  integerMath.c
src/utils/: gDoubleLinkNode.c  gSimpleLinkNode.c
test/: CMakeLists.txt
